# audiototext

./: .gitignore  README.txt  app.py  app_runner_macos  app_runner_macos_paste  dictation_with_paste.applescript  pyproject.toml
